compiler/tests/success/x86-64/cast_int.jazz
inline 
fn test(reg u64 buffer) -> inline int 
{
    inline int i j;
    i = 0;
    j = 1 << i;
    return j;
}